feature: css improvements, finished post

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,14 @@
+---
+import GithubIcon from './svg/Github.astro';
+import LinkedinIcon from './svg/Linkedin.astro';
+---
+
 <footer class="h-24 grid place-items-center">
   <div class="w-full mx-auto px-4 max-w-xl flex items-center justify-between">
-    <span> Adrian Gajdulewicz &copy; 2024</span>
-    <div class="flex items-center justify-center gap-2">
-      <div>Github</div>
-      <div>Linkedin</div>
+    <span class="flex font-medium flex-col">&copy;2024 CoP inc.</span>
+    <div class="flex items-center justify-center gap-4">
+      <GithubIcon />
+      <LinkedinIcon />
     </div>
   </div>
 </footer>
