--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,11 +5,11 @@ import PostList from '../components/PostList.astro';
 
 <Layout title="Welcome to Astro.">
   <header
-    class="flex flex-col sm:flex-row items-start gap-2 sm:gap-0 sm:items-center justify-between px-2"
+    class="flex flex-col sm:flex-row items-start sm:items-center justify-between px-2"
   >
-    <h1 class="font-semibold text-4xl tracking-tight">Code of power</h1>
-    <a href="/about" class="text-xs italic hover:underline"
-      >By Adrian Gajdulewicz</a
+    <h1 class="font-extrabold text-5xl tracking-tight">Code of Power</h1>
+    <a href="/about" class="text-xs font-medium hover:underline"
+      >by Adrian Gajdulewicz</a
     >
   </header>
   <PostList />
