--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 const { pathname } = Astro.url;
 ---
 
-<header>
+<header class="bg-black py-8 text-white text-lg">
   <nav class="flex items-center justify-around">
     <ul class="flex gap-2 items-center justify-center py-2">
       <li>
