--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -15,20 +15,20 @@ const formattedDate = date.toLocaleDateString('en-US', {
 ---
 
 <li class="[&:not(:last-child)]:border-b">
-  <article class="px-2 py-8 space-y-2 hover:scale-[1.01] transition-all">
+  <article class="px-2 py-4 space-y-3 hover:scale-[1.01] transition-all">
     <a href={`/posts/${slug}`}>
       <header
         class="flex flex-col sm:flex-row items-start sm:items-center justify-between"
       >
         <h2
           transition:name="test"
-          class="text-2xl truncate font-medium tracking-tight"
+          class="text-2xl truncate font-bold tracking-tight"
         >
           {title}
         </h2>
         <date class="text-sm">{formattedDate}</date>
       </header>
-      <p class="text-zinc-500 line-clamp-2">{description}</p>
+      <p class="text-zinc-500 mt-4 leading-5 line-clamp-2">{description}</p>
     </a>
   </article>
 </li>
