--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,11 +24,9 @@ const { title } = Astro.props;
     <title>{title}</title>
     <ViewTransitions />
   </head>
-  <body
-    class="antialiased min-h-full font-sans px-2 sm:px-0 bg-white dark:bg-black text-black dark:text-white"
-  >
+  <body class="grid grid-rows-[auto,1fr,auto] antialiased h-dvh">
     <Header />
-    <main class="max-w-xl mx-auto pt-24">
+    <main class="max-w-xl mx-auto pt-8">
       <slot />
     </main>
     <Footer />
