--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -10,23 +10,27 @@ const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout title={frontmatter.title}>
-  <header class="flex items-center justify-between">
-    <h1 transition:name="test" class="text-2xl font-medium tracking-tight">
-      {frontmatter.title}
-    </h1>
-    <p>{frontmatter.pubDate.toString().slice(0, 10)}</p>
-  </header>
-  <p class="text-zinc-500">{frontmatter.description}</p>
-  {
-    frontmatter.image && (
-      <img
-        src={frontmatter.image.url}
-        width="300"
-        alt={frontmatter.image.alt}
-      />
-    )
-  }
-  <article class="prose dark:prose-invert pt-20">
-    <slot />
-  </article>
+  <div class="px-4">
+    <header class="flex flex-col items-start justify-between">
+      <h1 transition:name="test" class="text-2xl font-bold tracking-tight">
+        {frontmatter.title}
+      </h1>
+      <p>{frontmatter.pubDate.toString().slice(0, 10)}</p>
+    </header>
+    <blockquote class="mt-6 border-l-2 pl-5 italic">
+      {frontmatter.description}
+    </blockquote>
+    {
+      frontmatter.image && (
+        <img
+          src={frontmatter.image.url}
+          width="300"
+          alt={frontmatter.image.alt}
+        />
+      )
+    }
+    <article class="prose dark:prose-invert pt-14">
+      <slot />
+    </article>
+  </div>
 </BaseLayout>
