--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const allPosts = await getCollection('posts');
 
 <Layout title="Welcome to Astro.">
   <Logo />
-  <ul class="shadow mt-6 space-y-2">
+  <ul class="shadow mt-6 rounded-sm mx-2 space-y-2">
     {
       allPosts.map((post) => (
         <PostCard
