--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,5 +1,5 @@
 <header class="flex flex-col items-start justify-between px-2">
-  <h1 class="font-extrabold text-5xl tracking-tight">Code of Power</h1>
+  <h1 class="font-extrabold font-logo leading-7 text-5xl">Code of Power</h1>
   <a href="/about" class="text-xs pl-4 font-medium hover:underline"
     >by Adrian Gajdulewicz</a
   >
