--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import PostCard from '../components/PostCard.astro';
 const allPosts = await getCollection('posts');
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout>
   <Logo />
   <ul class="shadow mt-6 rounded-sm mx-2 space-y-2">
     {
