--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,14 +7,14 @@ console.log(pathname);
 <header class="bg-black py-8 text-white text-lg">
   <nav class="sm:w-[36rem] mx-auto">
     <div class="flex items-center justify-between px-4">
-      <div class="flex flex-col items-start justify-between px-2">
+      <a href="/" class="flex flex-col items-start justify-between px-2">
         <h1 class="font-extrabold font-logo leading-6 text-4xl">
           Code of Power
         </h1>
-        <a href="/about" class="text-xs pl-4 font-medium hover:underline"
-          >by Adrian Gajdulewicz</a
+        <span class="text-xs pl-4 font-medium hover:underline"
+          >by Adrian Gajdulewicz</span
         >
-      </div>
+      </a>
 
       <ul class="flex gap-4 items-center justify-center py-2 text-base">
         <li>
