--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -21,7 +21,7 @@ const formattedDate = date.toLocaleDateString('en-US', {
         class="flex flex-col sm:flex-row items-start sm:items-center justify-between"
       >
         <h2
-          transition:name="test"
+          transition:name={`post-${title}`}
           class="text-2xl truncate font-bold tracking-tight"
         >
           {title}
