--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,6 @@
 ---
 const { pathname } = Astro.url;
-import { cn } from '../lib/utils';
-console.log(pathname);
+import { cn } from "../lib/utils";
 ---
 
 <header class="bg-black py-8 text-white text-lg">
@@ -20,16 +19,16 @@ console.log(pathname);
         <li>
           <a
             href="/"
-            class={cn('transition-all', {
-              'font-semibold': pathname === '/',
+            class={cn("transition-all", {
+              "font-semibold": pathname === "/",
             })}>Home</a
           >
         </li>
         <li>
           <a
             href="/about"
-            class={cn('transition-all', {
-              'font-semibold': pathname === '/about',
+            class={cn("transition-all", {
+              "font-semibold": pathname === "/about",
             })}>About</a
           >
         </li>
@@ -37,3 +36,4 @@ console.log(pathname);
     </div>
   </nav>
 </header>
+<p>{pathname}</p>
