--- a/src/components/svg/Github.astro
+++ b/src/components/svg/Github.astro
@@ -1,8 +1,8 @@
 ---
-import { githubLink } from '../../config';
+import { githubLink } from "../../config";
 ---
 
-<a href={githubLink} target="_blank">
+<a href={githubLink} target="_blank" aria-label="Github Link">
   <svg
     xmlns="http://www.w3.org/2000/svg"
     width="24"
