--- a/src/components/svg/Linkedin.astro
+++ b/src/components/svg/Linkedin.astro
@@ -1,8 +1,8 @@
 ---
-import { linkedinLink } from '../../config';
+import { linkedinLink } from "../../config";
 ---
 
-<a href={linkedinLink} target="_blank">
+<a href={linkedinLink} target="_blank" aria-label="Linkedin Link">
   <svg
     xmlns="http://www.w3.org/2000/svg"
     width="24"
