--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,11 +1,11 @@
 ---
-import type { Post } from '../content/config';
+import type { Post } from "../content/config";
 
 interface Props {
-  frontmatter: Post['data'];
+  frontmatter: Post["data"];
 }
 
-import BaseLayout from './BaseLayout.astro';
+import BaseLayout from "./BaseLayout.astro";
 const { frontmatter } = Astro.props;
 ---
 
@@ -13,12 +13,14 @@ const { frontmatter } = Astro.props;
   <div class="px-4">
     <header class="flex flex-col items-start justify-between">
       <h1
-        transition:name={`post-${frontmatter.title}`}
-        class="text-2xl font-bold tracking-tight"
+        transition:name={`post-title-${frontmatter.title}`}
+        class="text-5xl leading-10 font-extrabold tracking-tight text-balance"
       >
         {frontmatter.title}
       </h1>
-      <p>{frontmatter.pubDate.toString().slice(0, 10)}</p>
+      <p transition:name={`post-date-${frontmatter.title}`}>
+        {frontmatter.pubDate.toString().slice(0, 10)}
+      </p>
     </header>
     <blockquote class="mt-6 border-l-2 pl-5 italic">
       {frontmatter.description}
